# soc-cli

./: .gitignore  SOC_CLIMB_NOTES.md  pyproject.toml
src/soc_climb/: __init__.py  auto_edges.py  cli.py  graph.py  ingestion.py  models.py  pathfinding.py  storage.py  web.py
src/soc_climb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/soc_climb/static/: app.js  index.html  styles.css
tests/: test_auto_edges.py  test_cli.py  test_graph.py  test_ingestion.py  test_models.py  test_pathfinding.py  test_storage.py  test_web_extraction_logic.py
