[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-climb"
version = "0.1.0"
description = "Lightweight social graph toolkit"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]
web = ["fastapi>=0.110", "uvicorn>=0.30", "python-multipart>=0.0.9"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
